--- a/examples/simple-metrics/simple-metrics-plan.yaml
+++ b/examples/simple-metrics/simple-metrics-plan.yaml
@@ -1,7 +1,7 @@
 planYaml:
   planCode: experiment-simple-metric
   processes:
-    - code: experiment-simple-metrics
+    - code: experiment-simple-metrics-1.1
       name: experiment
       outputParams:
         sourcing: launchpad
