--- a/examples/simple-metrics/simple-metrics-plan.yaml
+++ b/examples/simple-metrics/simple-metrics-plan.yaml
@@ -6,6 +6,7 @@ planYaml:
       outputParams:
         sourcing: launchpad
       type: EXPERIMENT
+      timeoutBeforeTerminate: 1200
       metas:
         - key: feature
           value: simple-metrics-resource
