--- a/examples/factorial/functions.yaml
+++ b/examples/factorial/functions.yaml
@@ -1,6 +1,6 @@
 version: 2
 functions:
-  - code: mh.factirial:1.0
+  - code: mh.factorial:1.2
     type: factorial
     env: python-3
     sourcing: processor
@@ -17,9 +17,9 @@ functions:
 
 
       class Logger(object):
-          def __init__(self, log_file):
+          def __init__(self, artifact_path):
               self.terminal = sys.stdout
-              self.log = open(log_file, "w", encoding="utf-8")
+              self.log = open(os.path.join(artifact_path, "logfile-factorial.log"), "w", encoding="utf-8")
 
           def write(self, message):
               self.terminal.write(message)
@@ -58,19 +58,21 @@ functions:
 
 
       def get_var_as_int(var_name):
-        var_input = get_variable_by_id(params['inputs'], var_name)
-        input_filename = os.path.join(var_input['dataType'], str(var_input['id']))
-        input_file = open(input_filename, "r", encoding="utf-8")
+          var_input = get_variable_by_id(params['inputs'], var_name)
+          input_filename = os.path.join(var_input['dataType'], str(var_input['id']))
 
-        with open(input_file, 'r'', encoding="utf-8") as file:
-          data = file.read()
+          with open(input_filename, 'r', encoding='utf-8') as file:
+              data = file.read()
 
-        return int(data)
+          return int(data)
 
 
       cwd = os.getcwd()
-
       artifact_path = os.path.join(cwd, 'artifacts')
+      sys.stdout = Logger(artifact_path)
+
+      print('Start time: ', str(datetime.now()))
+      print('Args: ', sys.argv)
 
       # path to params.yaml will be absolute
       yaml_file = sys.argv[len(sys.argv)-1]
@@ -87,17 +89,11 @@ functions:
       if os.path.exists(result_filename):
           os.remove(result_filename)
 
-      var_logger = get_variable_by_id(params['outputs'], 'var-logger')
-      logger_filename = os.path.join(artifact_path, str(var_logger['id']))
-      sys.stdout = Logger(logger_filename)
-
-      print('Start time: ', str(datetime.now()))
-      print('Args: ', sys.argv)
-
-
       text_file = open(result_filename, "w", encoding="utf-8")
       text_file.write(str(f))
       text_file.close()
+
+      print('End time: ', str(datetime.now()))
 
       gc.collect()
       sys.exit(0)
