--- a/examples/factorial/mh-factorial-main-1.5.yaml
+++ b/examples/factorial/mh-factorial-main-1.5.yaml
@@ -1,11 +1,12 @@
 version: 3
 source:
   strictNaming: true
-  uid: mh-factorial-main-1.4
+  uid: mh-factorial-main-1.5
   variables:
     globals:
       - mh_int_0
       - mh_int_1
+      - mh_int_5
   processes:
     - code: mh.exec-source-code
       name: mh.exec-source-code
@@ -15,7 +16,8 @@ source:
       inputs:
         - name: mh_int_0
         - name: mh_int_1
+        - name: mh_int_5
       outputs:
         - name: resultOutput
       metas:
-        - source-code-uid: mh-factorial-recursion-1.12
+        - source-code-uid: mh-factorial-recursion-1.13
