--- a/examples/factorial/mh-factorial-recursion-1.13.yaml
+++ b/examples/factorial/mh-factorial-recursion-1.13.yaml
@@ -1,11 +1,12 @@
 version: 3
 source:
   strictNaming: true
-  uid: mh-factorial-recursion-1.12
+  uid: mh-factorial-recursion-1.13
   variables:
     inputs:
       - name: currIndex
       - name: inputValue
+      - name: factorialOf
     outputs:
       - name: factorialResult
   processes:
@@ -16,13 +17,13 @@ source:
         context: internal
       metas:
         - expression: factorialResult = inputValue
-      condition: currIndex > 2
+      condition: currIndex > factorialOf - 1
     - code: mh.nop
       name: mh.nop
       function:
         code: mh.nop
         context: internal
-      condition: currIndex < 3
+      condition: currIndex < factorialOf
       subProcesses:
         logic: sequential
         processes:
@@ -55,7 +56,7 @@ source:
             outputs:
               - name: subResult
             metas:
-              - source-code-uid: mh-factorial-recursion-1.12
+              - source-code-uid: mh-factorial-recursion-1.13
           - code: mh.evaluation2
             name: mh.evaluation2
             function:
