--- a/examples/factorial/mh-factorial-recursion-1.13.yaml
+++ b/examples/factorial/mh-factorial-recursion-1.13.yaml
@@ -53,6 +53,7 @@ source:
             inputs:
               - name: index
               - name: result
+              - name: factorialOf
             outputs:
               - name: subResult
             metas:
