--- a/common-bundle/common-bundle-cfg.yaml
+++ b/common-bundle/common-bundle-cfg.yaml
@@ -1,4 +1,6 @@
 bundleConfig:
-  - path: fn-get-length-of-file-by-ref
+  - path: examples
     type: function
+  - path: source-codes
+    type: sourceCode
 version: 1
